rs/macros/core/tests/snapshots/event__event_basic.snap
---
source: rs/macros/core/tests/event.rs
expression: result
---
pub enum MyEvent {
    MyEvent1,
}
impl sails::SailsEvent for MyEvent {
    fn encoded_event_name(&self) -> &'static [u8] {
        match self {
            MyEvent::MyEvent1 => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 49u8]
            }
        }
    }
    fn entry_id(&self) -> u16 {
        match self {
            MyEvent::MyEvent1 => 0u16,
        }
    }
    fn skip_bytes() -> usize {
        1
    }
}
