rs/macros/core/tests/snapshots/event__event_sails_rename.snap
---
source: rs/macros/core/tests/event.rs
expression: result
---
#[derive(sails_rename::Encode, sails_rename::TypeInfo)]
#[codec(crate = sails_rename::scale_codec)]
#[scale_info(crate = sails_rename::scale_info)]
pub enum Events {
    MyEvent1 { sender: u128, amount: u128, note: String },
    MyEvent2(u128, u128, String),
    MyEvent3,
}
impl sails_rename::SailsEvent for Events {
    fn encoded_event_name(&self) -> &'static [u8] {
        match self {
            Events::MyEvent1 { .. } => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 49u8]
            }
            Events::MyEvent2(..) => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 50u8]
            }
            Events::MyEvent3 => {
                &[32u8, 77u8, 121u8, 69u8, 118u8, 101u8, 110u8, 116u8, 51u8]
            }
        }
    }
    fn skip_first_bytes() -> usize {
        1
    }
}
